# yummy_Hard

./: QRtoAudio.py  README.md  get_all.py  get_param.py  get_play.py  pyproject.toml  ser.py  serial_audio_player.py  sound.py  test.py  trim_silence.py
