[project]
name = "yummy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ffmpeg>=1.4",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pydub>=0.25.1",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
